@@ -1,3 +1,9 @@
+2005-07-19  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* config.gcc: Add support for *-*-freebsd7, *-*-freebsd8,
+	and *-*-freebsd9.
+	* config/freebsd-spec.h (FBSD_TARGET_OS_CPP_BUILTINS): Ditto.
+	
 2005-07-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (output_set_got): Don't omit OFFSET FLAT:
